--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple node server",
   "main": "index.js",
   "scripts": {
-    "start":"node index",
+    "start": "node index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,5 +23,10 @@
   "bugs": {
     "url": "https://github.com/Amir9eng/node-exercises/issues"
   },
-  "homepage": "https://github.com/Amir9eng/node-exercises#readme"
+  "homepage": "https://github.com/Amir9eng/node-exercises#readme",
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.4"
+  }
 }
