--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.10.9",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.4"
+    "node": "^14.14.0",
+    "nodemon": "^2.0.4",
+    "sass": "^1.27.0"
   }
 }
